improve maze walls

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8" />
-		<title>A-MAZE</title>
-		<style>
-			body {
-				all: unset;
-			}
-		</style>
-	</head>
-	<body>
-		<canvas id="maze" width="500" height="500"></canvas>
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>maze generator</title>
+        <style>
+            body {
+                all: unset;
+            }
+        </style>
+    </head>
+    <body>
+        <canvas id="maze" width="500" height="500"></canvas>
+    </body>
     <script src="./maze.js"></script>
-	<script src="./script.js"></script>
+    <script src="./script.js"></script>
 </html>
